* Wed Sep 24 2014 - jschauma@twitter.com
- 3.0.3
-  [SECURITY-14609]: accept encrypted input with spurious whitespace
-  clarify that '-k' can be used for decryption as well

* Fri Sep 12 2014 - jschauma@twitter.com
- 3.0.2
-  [SECURITY-14355]: better detect when input is garbled

* Thu May 15 2014 - jschauma@twitter.com
- 3.0.1
-  [SECURITY-12394]: call /bin/stty instead of relying on the PATH

* Fri Feb 21 2014 - jschauma@twitter.com
- 3.0
-  [SECURITY-11509]: correctly generate fingerprint
   This introduces an incompatibility between version 2.1/2.2 and this
   version, which did not correctly generate a fingerprint for ssh pubkeys
   with a small exponent.

* Thu Jan 30 2014 - jschauma@twitter.com
- 2.2:
-  [SECURITY-11290]: re-introduce backwards compatibility with username-fp
   format
-  sort cap options properly
-  re-add "-f" description into usage

* Mon Jan 27 2014 - jschauma@twitter.com
- 2.1
-  remove dependencies on openssl(1) and ssh-keygen(1) altogether by
   rewriting all encryption/decryption natively in Go
   (this happens to also address [SECURITY-11186])
-  fix tyop in usage

* Tue Dec 31 2013 - jschauma@twitter.com
- 2.0
-  complete rewrite of jass(1) in Go
-  no longer depend on ssh-keygen(1)'s ability to convert ssh keys to
   PKCS8 (as is broken in OS X Mavericks, or unavailable in OpenSSH before
   5.6)

* Fri Dec 13 2013 - jschauma@twitter.com
- 1.8.1
-  better detection of compatibilities
-  add dependency on curl for the rpm

* Thu Dec 12 2013 - jschauma@twitter.com
- 1.8.0
-  add support for fetching pubkeys from GitHub

* Tue Nov 26 2013 - jschauma@twitter.com
- 1.7.2:
-  [SECURITY-10466]: handle keys with options and multiple comments
-  document '-E' in usage

* Wed Sep 25 2013 - jschauma@twitter.com
- 1.7.1:
-  add an option to skip the version check
-  [SECURITY-9720]: if we can't decrypt the session key, suggest to the
   user that they might have entered the wrong passphrase