@@ -1,10 +1,10 @@
-JASS(1) 		  BSD General Commands Manual		       JASS(1)
+JASS(1)			NetBSD General Commands Manual		       JASS(1)
 
 NAME
      jass -- just another secret sharer
 
 SYNOPSIS
-     jass [-GVdehv] [-f file] [-g group] [-k key] [-u user]
+     jass [-GVdehv] [-f file] [-g group] [-k key] [-p passin] [-u user]
 
 DESCRIPTION
      The jass tool allows you to share a secret with other people through the
@@ -14,37 +14,35 @@ DESCRIPTION
 OPTIONS
      The following options are supported by jass:
 
-     -G        Also look for public keys on GitHub.
+     -G		 Also look for public keys on GitHub.
 
-     -V        Print version number and exit.
+     -V		 Print version number and exit.
 
-     -e        Perform encryption.  This is the default.
+     -e		 Perform encryption.  This is the default.
 
-     -d        Perform decryption.
+     -d		 Perform decryption.
 
-     -f file   Encrypt/decrypt this file.  If not specified, jass will read
-	       data from stdin.
+     -f file	 Encrypt/decrypt this file.  If not specified, jass will read
+		 data from stdin.
 
-     -g group  Encrypt for all members of this group.
+     -g group	 Encrypt for all members of this group.
 
-     -h        Print a short help message and exit.
+     -h		 Print a short help message and exit.
 
-     -k key    Encrypt or decrypt the input using the key(s) found in key.
+     -k key	 Encrypt or decrypt the input using the key(s) found in key.
 
-     -p        Passphrase from a variety of sources - pass:passphrase
-	       file:filename env:envvar.  Similar to openssl(1) -passin.  If
-	       no password argument is given and a password is required then
-	       the user is prompted to enter one: this will typically be read
-	       from the current terminal with echoing turned off.
+     -p passin	 Specify the method to retrieve the passphrase for the private
+		 key.  See PASS PHRASE ARGUMENTS for details.  Defaults to
+		 interactively prompt on the controlling tty.
 
-     -u user   Encrypt the input for this user, attempting to find suitable
-	       public SSH keys on the local system or from LDAP.
+     -u user	 Encrypt the input for this user, attempting to find suitable
+		 public SSH keys on the local system or from LDAP.
 
-     -v        Be verbose.  Can be specified multiple times.
+     -v		 Be verbose.  Can be specified multiple times.
 
 DETAILS
      It is not uncommon for people within a given organization to have a need
-     to share secrets with one another.  jass lets you do this through the use
+     to share secrets with one another.	 jass lets you do this through the use
      of SSH RSA keys, as those are frequently already well distributed and
      trusted.
 
@@ -55,7 +53,7 @@ DETAILS
      with said session key.
 
      As an alternative to providing a public key, a recipient may also be
-     specified via the -g and -u flags.  If -g was specified, jass will expand
+     specified via the -g and -u flags.	 If -g was specified, jass will expand
      the given group to individual users.  For each user, jass will first look
      for that user's ~/.ssh/authorized_keys file, then the file
      /etc/ssh/authorized_keys/<user>.  If neither of these is readable, it
@@ -72,6 +70,25 @@ DETAILS
      these when the -d flag is specified, though it should be noted that the
      decrypted session key briefly lives on the disk in a temporary directory.
 
+PASS PHRASE ARGUMENTS
+     jass allows you to specify the passphrase for your private key via one of
+     the following methods.  Please note that doing so carries certain risks,
+     and you should carefully evaluate what may be the best option for you.
+
+     pass:password   The actual password is password.  Since the password is
+		     visible to utilities such as ps(1) this form should only
+		     be used where security is not important.
+
+     env:var	     Obtain the password from the environment variable var.
+		     Since the environment of other processes may be visible
+		     via e.g.  ps(1) m this option should be used with cau-
+		     tion.
+
+     file:pathname   The first line of pathname is the password.  pathname
+		     need not refer to a regular file: it could for example
+		     refer to a device or named pipe.  Note that standard Unix
+		     file access controls should be used to protect this file.
+
 EXAMPLES
      To generate a secret message encrypted with the file 'bobs_pubkey' and
      store it in the file 'secret':
@@ -81,7 +98,7 @@ EXAMPLES
 
      To send a secret message to 'jschauma':
 
-	   echo "The lion sleeps." | jass -u jschauma |  \
+	   echo "The lion sleeps." | jass -u jschauma |	 \
 		   mail -s "Nothing to see here" jschauma
 
      To decrypt a secret message generated by jass using the private ssh key
@@ -106,7 +123,7 @@ ENVIRONMENT
 
      LDAPFIELD	  SSHPubkey
 
-     LDAPSEARCH   ldapsearch -LLLxh ldap.yourdomain.com -b dc=example,dc=com
+     LDAPSEARCH	  ldapsearch -LLLxh ldap.yourdomain.com -b dc=example,dc=com
 
 SEE ALSO
      enc(1), openssl(1), rsautl(1), ssh-keygen(1)
@@ -123,4 +140,4 @@ HISTORY
      jass was originally written by Jan Schaumann <jschauma@twitter.com> in
      April 2013.
 
-BSD			      September 23, 2014			   BSD
+NetBSD 5.0			April 20, 2014			    NetBSD 5.0
